[package]
name = "slash-formatter"
version = "3.1.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/slash-formatter"
homepage = "https://magiclen.org/slash-formatter"
keywords = ["slash", "url", "path", "string", "backslash"]
categories = ["no-std", "value-formatting"]
description = "This crate provides functions to deal with slashes and backslashes in strings."
license = "MIT"
include = ["src/**/*", "build.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
concat-with = "0.2.3"
